--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ pytest~=8.4.1
 Flask==3.0.3
 Werkzeug==3.1.3
 python-dateutil~=2.9.0.post0
+Flask-WTF
+Flask-Login
+password-validator
+WTForms~=3.2.1
+python-dotenv~=1.1.1
