--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ WTF_CSRF_SECRET_KEY = '$=H}j62u&SyJCy,JGELHx&3$jr6`>T3Y'  # Needed by Flask WTFo
 # Database variables
 # ------------------
 SQLALCHEMY_DATABASE_URI = 'sqlite:///recipes.db'
-SQLALCHEMY_ECHO = False # echo SQL statements when working with database
+SQLALCHEMY_ECHO = False      # echo SQL statements when working with database
 
 # Repository selection variable
 # REPOSITORY = 'memory'                                   # 'memory' or 'database'
-REPOSITORY = 'memory'
+REPOSITORY = 'database'
