--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-flask-sqlalchemy
+SQLAlchemy==1.4.41
 pytest~=8.4.1
-Flask==3.0.3
-Werkzeug==3.1.3
+Flask==2.2.0
+Werkzeug==2.2.0
 python-dateutil~=2.9.0.post0
 Flask-WTF
 Flask-Login
 password-validator
 WTForms~=3.2.1
-python-dotenv~=1.1.1
+python-dotenv~=0.19.0
