--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ SQLALCHEMY_ECHO = False      # echo SQL statements when working with database
 
 # Repository selection variable
 # REPOSITORY = 'memory'                                   # 'memory' or 'database'
-REPOSITORY = 'memory'
+REPOSITORY = 'database'
